--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "shop",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://akamaspb.github.io/shop/",
+  "homepage": "https://sanek076.github.io/shop/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
